paint first layer black (avoid noticable bottom white flicker)

--- a/src/client/app/app.css
+++ b/src/client/app/app.css
@@ -1,3 +1,7 @@
+html {
+    background-color: black;
+}
+
 html,
 body {
     font-family: Jura;
